Prevent embedded iframes getting too large.

--- a/hasjob/static/css/screen.css
+++ b/hasjob/static/css/screen.css
@@ -941,6 +941,10 @@ h2 {
   box-shadow: #ccccff 0 0 5px, #ccccff 0 0 5px 0 inset;
 }
 
+iframe {
+  max-width: 100%;
+}
+
 /* Spam protection */
 .z {
   display: none;
