--- a/hasjob/static/sass/_layout.scss
+++ b/hasjob/static/sass/_layout.scss
@@ -554,5 +554,9 @@ h2 {
     @include box-shadow(#ccf 0 0 5px, #ccf 0 0 5px 0 inset);
 }
 
+iframe {
+    max-width: 100%;
+}
+
 /* Spam protection */
 .z {display: none;}
